trunk/Archive2/57/727934b18aa4bf/output
main.cpp:5:20: error: expected the class name after '~' to name a destructor
class base{public:~Base() { }};
                   ^~~~
                   base
1 error generated.
